Downloaded all Etree sources including 1995

--- a/etree_source/year_1970.html
+++ b/etree_source/year_1970.html
@@ -2988,7 +2988,7 @@ Fillmore East, New York, NY" href="/lookup_show.php?shows_key=616">09/19/70</a>
                 <a title="gd1970-09-19.mtx.chappell.SB14.31510.sbeok.flac16" href="https://www.archive.org/details/gd1970-09-19.mtx.chappell.SB14.31510.sbeok.flac16"><img src="/lma.png" border="0"></a>
                 <a title="gd1970-09-19.sbd.reynolds.97906.flac16" href="https://www.archive.org/details/gd1970-09-19.sbd.reynolds.97906.flac16"><img src="/lma.png" border="0"></a>
                 <a title="gd1970-09-19.119722.akg.weinberg.moore-berger.flac16" href="https://www.archive.org/details/gd1970-09-19.119722.akg.weinberg.moore-berger.flac16"><img src="/lma.png" border="0"></a>
-            
+                        
                 </td>
         <td align="center"><a onClick="addShow(616); return false;" href="/db/myshows/insert/shows_key/616">add</a>
 
@@ -2997,7 +2997,8 @@ Fillmore East, New York, NY" href="/lookup_show.php?shows_key=616">09/19/70</a>
                             <a title="SBD &gt; Reel(0) &gt; DAT &gt; Mac (via Lucid PCI24) &gt; CD-R; DAT from &quot;3 Decades
 of Dead&quot; Tree CDR; Conversion by Tim Buller" href="/shn/102">102</a>,                            <a title="MSR &gt; DAT &gt; CD or SBD&gt; Rm&gt; Reel&gt; Dat&gt; Sonic Solutions&gt; CD; EAC&gt; SHN by Seth Kaplan; more complete than previously etreed versions" href="/shn/5217">5217</a>,                            <a title="Composite Audience Source (Master audience cassette Taped by Jack Toner, Sony TC-110 with built-in microphone and Master audience reel Taped by Marty Weinberg, AKG190E&gt;Uher 400L) via Dwight Holmes and Dr. Michael Parrish. Patches and EAC &gt; SHN by Jack Warner 
 " href="/shn/25473">25473</a>,                            <a title=" flac16 ; (disc 3 only) Sick Bits 14; matrix: SBD/AUD mix of 2 previously circulating sources (SBD: shnid=5217 &amp; AUDs (composite): shnid=25473)
-edited, mixed and converted by Chris Chappell" href="/shn/31510">31510</a>,                            <a title=" flac16 ; SBD -&gt; Master Reel -&gt; CD -&gt; EAC(secure, offset corrected) -&gt; CoolEdit Pro -&gt; TLH -&gt; FLAC16;  Circulated by Chuck Reynolds" href="/shn/97906">97906</a>,                            <a title=" flac16 ; source: aud 1st gen reel; Jerry Moore&#039;s copy; lineage: aud reel master&gt;reel @ 3.75 ips master taped by Marty Weinberg: akg d190e&gt;Uher 4000L reel; technics rs-1506&gt;hd-p2 24/96 compact flash &gt; pc &gt; cd wave &gt;adobe audition 2.0 &gt; flac; transferred &amp; seeded by Rob Berger" href="/shn/119722">119722</a>                    </td>
+edited, mixed and converted by Chris Chappell" href="/shn/31510">31510</a>,                            <a title=" flac16 ; SBD -&gt; Master Reel -&gt; CD -&gt; EAC(secure, offset corrected) -&gt; CoolEdit Pro -&gt; TLH -&gt; FLAC16;  Circulated by Chuck Reynolds" href="/shn/97906">97906</a>,                            <a title=" flac16 ; source: aud 1st gen reel; Jerry Moore&#039;s copy; lineage: aud reel master&gt;reel @ 3.75 ips master taped by Marty Weinberg: akg d190e&gt;Uher 4000L reel; technics rs-1506&gt;hd-p2 24/96 compact flash &gt; pc &gt; cd wave &gt;adobe audition 2.0 &gt; flac; transferred &amp; seeded by Rob Berger" href="/shn/119722">119722</a>,                            <a title="Source unknown, but thought to be Jack Toner&#039;s audience recording, part of which is available on the Warner 25473 composite copy.
+Lineage: AUD &gt; ?? &gt; CD WAV &gt; FLAC" href="/shn/143300">143300</a>                    </td>
     </tr>
     <tr class="b1">
         <td align="center">
@@ -4340,7 +4341,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:09 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:19 EST<br>
 			</div>
 			</td>
 		</tr>
