--- a/etree_source/year_1971.html
+++ b/etree_source/year_1971.html
@@ -2702,6 +2702,8 @@ Hill Auditorium, Ann Arbor, MI" href="/lookup_show.php?shows_key=745">12/15/71</
         <td>MI</td>
         <td>
                 <a title="gd71-12-15.12615.sbd.cotsman.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=530408"><img src="/bt.png" border="0"></a>
+                <a title="gd1971-12-15.149830.sbd.mr.miller.flac24" href="http://bt.etree.org/details.php?id=609763"><img src="/bt.png" border="0"></a>
+                <a title="gd1971-12-15.149966.sbd.mr.miller.flac16" href="http://bt.etree.org/details.php?id=609796"><img src="/bt.png" border="0"></a>
     
                 <a title="gd1971-12-15.sbd.Oleynick.134.shnf" href="https://www.archive.org/details/gd1971-12-15.sbd.Oleynick.134.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd71-12-15.sbd.cotsman.12615.sbeok.shnf" href="https://www.archive.org/details/gd71-12-15.sbd.cotsman.12615.sbeok.shnf"><img src="/lma.png" border="0"></a>
@@ -2934,7 +2936,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:10 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:22 EST<br>
 			</div>
 			</td>
 		</tr>
