--- a/etree_source/year_1972.html
+++ b/etree_source/year_1972.html
@@ -1534,6 +1534,8 @@ Hollywood Palladium, Hollywood, CA" href="/lookup_show.php?shows_key=792">09/09/
                 <a title="gd72-09-09.103311.mtx.seamons-bertrando.t-flac16" href="http://bt.etree.org/details.php?id=531497"><img src="/bt.png" border="0"></a>
                 <a title="gd72-09-09.14086.sbd.popi.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=531496"><img src="/bt.png" border="0"></a>
                 <a title="Grateful Dead -- Hunter&#039;s Trix -- Vol. 64 -- 09/09/72 -- Hollywood Palladium - Hollywood, CA" href="http://bt.etree.org/details.php?id=540670"><img src="/bt.png" border="0"></a>
+                <a title="gd1972-09-09.sbd.boswell.smith.miller.clugston.149458.flac2496" href="http://bt.etree.org/details.php?id=609224"><img src="/bt.png" border="0"></a>
+                <a title="gd1972-09-09.sbd.boswell.smith.miller.clugston.149457.flac1648" href="http://bt.etree.org/details.php?id=609225"><img src="/bt.png" border="0"></a>
     
                 <a title="gd72-09-09.sbd.popi.14086.sbeok.shnf" href="https://www.archive.org/details/gd72-09-09.sbd.popi.14086.sbeok.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd72-09-09.aud.unknown.30991.sbeok.flacf" href="https://www.archive.org/details/gd72-09-09.aud.unknown.30991.sbeok.flacf"><img src="/lma.png" border="0"></a>
@@ -2704,7 +2706,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:12 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:25 EST<br>
 			</div>
 			</td>
 		</tr>
