--- a/etree_source/year_1976.html
+++ b/etree_source/year_1976.html
@@ -850,6 +850,7 @@ Auditorium Theatre, Chicago, IL" href="/lookup_show.php?shows_key=962">06/26/76<
                 <a title="gd76-06-26.95306.sbd.miller.sbeok.t-flac16h" href="http://bt.etree.org/details.php?id=538253"><img src="/bt.png" border="0"></a>
                 <a title="gd76-06-26.95355.mtx.seamons.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=538254"><img src="/bt.png" border="0"></a>
                 <a title="gd76-06-26.s2.aud.digitalrbb.miller.112790.flac16" href="http://bt.etree.org/details.php?id=543926"><img src="/bt.png" border="0"></a>
+                <a title="Grateful Dead – Hunter&#039;s Trix – Vol. 31 – 06/26/76 – Auditorium Theatre - Chicago, IL [GDOTD]" href="http://bt.etree.org/details.php?id=609977"><img src="/bt.png" border="0"></a>
     
                 <a title="gd76-06-26.aud.vernon.7340.sbeok.shnf" href="https://www.archive.org/details/gd76-06-26.aud.vernon.7340.sbeok.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd1976-06-26.sbd.miller.95306.sbeok.flac16" href="https://www.archive.org/details/gd1976-06-26.sbd.miller.95306.sbeok.flac16"><img src="/lma.png" border="0"></a>
@@ -1711,7 +1712,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:24 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:29 EST<br>
 			</div>
 			</td>
 		</tr>
