--- a/etree_source/year_1977.html
+++ b/etree_source/year_1977.html
@@ -369,7 +369,6 @@ Winterland Arena, San Francisco, CA" href="/lookup_show.php?shows_key=990">03/18
         <td>CA</td>
         <td>
                 <a title="Grateful Dead - Winterland Arena, San Francisco, CA - 03/18/77 - SBD [254 + 79098 patch]" href="http://bt.etree.org/details.php?id=508962"><img src="/bt.png" border="0"></a>
-                <a title="Grateful Dead - Winterland - 3-18-77 (245 &amp; 79098 patch) - by request" href="http://bt.etree.org/details.php?id=523960"><img src="/bt.png" border="0"></a>
                 <a title="gd77-03-18.00254.patched-with-79098.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=539315"><img src="/bt.png" border="0"></a>
                 <a title="Grateful Dead -- Hunter&#039;s Trix -- Vol. 114 -- 03/18/77 -- Winterland - San Francisco, CA ***41st Anniversary***" href="http://bt.etree.org/details.php?id=598618"><img src="/bt.png" border="0"></a>
                 <a title="gd1977-03-18.145158.ecm270.menke.sirmick.flac16" href="http://bt.etree.org/details.php?id=604307"><img src="/bt.png" border="0"></a>
@@ -1337,6 +1336,7 @@ Winterland Arena, San Francisco, CA" href="/lookup_show.php?shows_key=1036">06/0
                 <a title="gd77-06-08.95361.mtx.seamons.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=540228"><img src="/bt.png" border="0"></a>
                 <a title="gd77-06-08.25621.sbd.miller.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=540227"><img src="/bt.png" border="0"></a>
                 <a title="gd1977-06-08.144923.akg.d224.bertrando.troy.miller.smith.sirmick.flac16" href="http://bt.etree.org/details.php?id=604163"><img src="/bt.png" border="0"></a>
+                <a title="Grateful Dead – Hunter&#039;s Trix – Vol. 32 – 06/08/77 – Winterland Arena - San Francisco, CA [GDOTD]" href="http://bt.etree.org/details.php?id=609861"><img src="/bt.png" border="0"></a>
     
                 <a title="gd1977-06-08.sbd.parmer.4184.sbefail.shnf" href="https://www.archive.org/details/gd1977-06-08.sbd.parmer.4184.sbefail.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd77-06-08.sbd.clugston.15421.sbeok.shnf" href="https://www.archive.org/details/gd77-06-08.sbd.clugston.15421.sbeok.shnf"><img src="/lma.png" border="0"></a>
@@ -2286,7 +2286,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:25 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:29 EST<br>
 			</div>
 			</td>
 		</tr>
