--- a/etree_source/year_1979.html
+++ b/etree_source/year_1979.html
@@ -1524,6 +1524,7 @@ Springfield Civic Center, Springfield, MA" href="/lookup_show.php?shows_key=1189
         <td>
                 <a title="gd79-10-24.97440.sdb-set2.miller.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=546162"><img src="/bt.png" border="0"></a>
                 <a title="gd79-10-24.93142.aud-senn441.eaton-miller.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=546161"><img src="/bt.png" border="0"></a>
+                <a title="gd1979-10-24.148162.s1.sbd.flac16" href="http://bt.etree.org/details.php?id=607820"><img src="/bt.png" border="0"></a>
     
                 <a title="gd79-10-24.senn.munder.13298.sbeok.shnf" href="https://www.archive.org/details/gd79-10-24.senn.munder.13298.sbeok.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd79-10-24.rolfe.vernon-pujol.19589.sbeok.shnf" href="https://www.archive.org/details/gd79-10-24.rolfe.vernon-pujol.19589.sbeok.shnf"><img src="/lma.png" border="0"></a>
@@ -2657,7 +2658,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:29 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:32 EST<br>
 			</div>
 			</td>
 		</tr>
