--- a/etree_source/year_1983.html
+++ b/etree_source/year_1983.html
@@ -403,6 +403,7 @@ Compton Terrace Amphitheatre, Tempe, AZ" href="/lookup_show.php?shows_key=1456">
         <td>
                 <a title="gd83-03-25.07350.fob-senn421.willy.t-flac16" href="http://bt.etree.org/details.php?id=562580"><img src="/bt.png" border="0"></a>
                 <a title="gd83-03-25.23572.sbd.miller.t-flac16" href="http://bt.etree.org/details.php?id=562581"><img src="/bt.png" border="0"></a>
+                <a title="gd83-03-25.Compton.Terrace.Tempe.AZ.sbd.clugston.148801.flac16" href="http://bt.etree.org/details.php?id=609241"><img src="/bt.png" border="0"></a>
     
                 <a title="gd83-03-25.fob-senn.willy.7350.sbeok.shnf" href="https://www.archive.org/details/gd83-03-25.fob-senn.willy.7350.sbeok.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd83-03-25.sbd.miller.23572.sbeok.shnf" href="https://www.archive.org/details/gd83-03-25.sbd.miller.23572.sbeok.shnf"><img src="/lma.png" border="0"></a>
@@ -1435,7 +1436,6 @@ Saratoga Performing Arts Center, Saratoga Springs, NY" href="/lookup_show.php?sh
         <td>Saratoga Springs</td>
         <td>NY</td>
         <td>
-                <a title="Grateful Dead 6-18-83 SPAC - by request" href="http://bt.etree.org/details.php?id=523899"><img src="/bt.png" border="0"></a>
                 <a title="Saratoga Performing Arts Center 6/18/83 Set 2 ONLY AUD Sennheiser 441" href="http://bt.etree.org/details.php?id=523929"><img src="/bt.png" border="0"></a>
                 <a title="6/18/83 Set 2 only" href="http://bt.etree.org/details.php?id=543364"><img src="/bt.png" border="0"></a>
                 <a title="gd83-06-18.119437.beyerM88.morrone.flac2448" href="http://bt.etree.org/details.php?id=563241"><img src="/bt.png" border="0"></a>
@@ -3045,6 +3045,7 @@ Carrier Dome, Syracuse U, Syracuse, NY" href="/lookup_show.php?shows_key=1515">1
                 <a title="gd1983-10-22.Nak300CP4.Hill.Keo.135075.Flac1644" href="http://bt.etree.org/details.php?id=584831"><img src="/bt.png" border="0"></a>
                 <a title="gd1983-10-22.Nak300CP4.Hill.Keo.135076.Flac2496" href="http://bt.etree.org/details.php?id=584832"><img src="/bt.png" border="0"></a>
                 <a title="gd1983-10-22.137333.senn421.miller.flac16" href="http://bt.etree.org/details.php?id=590188"><img src="/bt.png" border="0"></a>
+                <a title="gd1983-10-22.148290.sbd.clugston.flac16" href="http://bt.etree.org/details.php?id=607813"><img src="/bt.png" border="0"></a>
     
                 <a title="gd83-10-22.sennheiser.dodd.10547.sbeok.shnf" href="https://www.archive.org/details/gd83-10-22.sennheiser.dodd.10547.sbeok.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd83-10-22.sbd.drgseeds.17274.sbeok.shnf" href="https://www.archive.org/details/gd83-10-22.sbd.drgseeds.17274.sbeok.shnf"><img src="/lma.png" border="0"></a>
@@ -3443,7 +3444,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:39 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:37 EST<br>
 			</div>
 			</td>
 		</tr>
