--- a/etree_source/year_1966.html
+++ b/etree_source/year_1966.html
@@ -2761,6 +2761,7 @@ The Matrix, San Francisco, CA" href="/lookup_show.php?shows_key=105">12/01/66</a
                 <a title="Grateful Dead (-: *GD66-67* :-) The Matrix, San Francisco, CA - 12/1/66 [SBD.32800]" href="http://bt.etree.org/details.php?id=507784"><img src="/bt.png" border="0"></a>
                 <a title="Grateful Dead (-: *GD66-67* :-) 12/1/66 The Matrix San Francisco CA" href="http://bt.etree.org/details.php?id=507802"><img src="/bt.png" border="0"></a>
                 <a title="gd66-12-01.26968.sbd.sirmick.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=548838"><img src="/bt.png" border="0"></a>
+                <a title="gd1966-12-01.150269.ANON.gems.flac16" href="http://bt.etree.org/details.php?id=609981"><img src="/bt.png" border="0"></a>
     
                 <a title="gd66-12-01.sbd.ladner.8575.sbeok.shnf" href="https://www.archive.org/details/gd66-12-01.sbd.ladner.8575.sbeok.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd66-12-01.sbd.sirmick.26968.sbeok.shnf" href="https://www.archive.org/details/gd66-12-01.sbd.sirmick.26968.sbeok.shnf"><img src="/lma.png" border="0"></a>
@@ -3440,7 +3441,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:58:59 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:15 EST<br>
 			</div>
 			</td>
 		</tr>
