--- a/etree_source/year_1969.html
+++ b/etree_source/year_1969.html
@@ -3527,6 +3527,7 @@ Winterland Arena, San Francisco, CA" href="/lookup_show.php?shows_key=495">10/25
         <td>CA</td>
         <td>
                 <a title="gd69-10-25.00081.sbd.jagla.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=551589"><img src="/bt.png" border="0"></a>
+                <a title="gd1969-10-25.150136.sbd.miller.flac16" href="http://bt.etree.org/details.php?id=609946"><img src="/bt.png" border="0"></a>
     
                 <a title="gd69-10-25.sbd.jagla.81.sbefail.shnf" href="https://www.archive.org/details/gd69-10-25.sbd.jagla.81.sbefail.shnf"><img src="/lma.png" border="0"></a>
             
@@ -4413,7 +4414,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:06 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:18 EST<br>
 			</div>
 			</td>
 		</tr>
