--- a/etree_source/year_1981.html
+++ b/etree_source/year_1981.html
@@ -2024,6 +2024,7 @@ Stabler Arena, Lehigh U, Bethlehem, PA" href="/lookup_show.php?shows_key=1362">0
         <td>
                 <a title="gd81-09-25.023626.nak700.rolfe-weiner.t-flac16" href="http://bt.etree.org/details.php?id=558027"><img src="/bt.png" border="0"></a>
                 <a title="gd81-09-25.088822.sbd.miller-t-flac16" href="http://bt.etree.org/details.php?id=558028"><img src="/bt.png" border="0"></a>
+                <a title="gd1981-09-25.Stabler.Arena.Lehigh.University.Bethlehem.PA.sbd.latvala.nixon.clugston.148686.flac16" href="http://bt.etree.org/details.php?id=609254"><img src="/bt.png" border="0"></a>
     
                 <a title="gd81-09-25.sbd.clugston.2215.sbeok.shnf" href="https://www.archive.org/details/gd81-09-25.sbd.clugston.2215.sbeok.shnf"><img src="/lma.png" border="0"></a>
                 <a title="gd81-09-25.aud.jim.13725.sbeok.shnf" href="https://www.archive.org/details/gd81-09-25.aud.jim.13725.sbeok.shnf"><img src="/lma.png" border="0"></a>
@@ -3072,7 +3073,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:34 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:35 EST<br>
 			</div>
 			</td>
 		</tr>
