--- a/etree_source/year_1982.html
+++ b/etree_source/year_1982.html
@@ -429,6 +429,7 @@ Pauley Pavilion, UCLA, Los Angeles, CA" href="/lookup_show.php?shows_key=1397">0
         <td>
                 <a title="gd82-02-21.sbd.dodd.16247.sbeok.shnf_shn" href="http://bt.etree.org/details.php?id=505511"><img src="/bt.png" border="0"></a>
                 <a title="gd82-02-21.16247.sbd.dodd.sbeok.t-flac16" href="http://bt.etree.org/details.php?id=560351"><img src="/bt.png" border="0"></a>
+                <a title="gd1982-02-21.148007.sbd.miller.clugston.flac16" href="http://bt.etree.org/details.php?id=607821"><img src="/bt.png" border="0"></a>
     
                 <a title="gd82-02-21.sbd.dodd.16247.sbeok.shnf" href="https://www.archive.org/details/gd82-02-21.sbd.dodd.16247.sbeok.shnf"><img src="/lma.png" border="0"></a>
             
@@ -2720,7 +2721,7 @@ function addShow(shows_key, shninfo_key) {
 		<td>All content by members of the etree.org community, for the etree.org community. &copy; 2018 etree.org</tr>
 		        <td>       	
 			<div style="text-align:right;">
-			Cached: Wed, 13 Nov 2019 07:59:37 EST<br>
+			Cached: Wed, 10 Mar 2021 15:49:36 EST<br>
 			</div>
 			</td>
 		</tr>
