--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <h5 class="text-muted">Played 615 times, from <a href="#">31st Oct 67</a> to <a href="#">8th Jul 95</a> (27 years, 250 days).</h5>
             <h5 class="text-muted">It was the <a href="#">66th</a> different song played and first played at the <a href="#">35th</a> recorded show.</h5>
             <h5 class="text-muted">The average length of the song is 9m 30s.</h5>
+            <h5><i>Note that the data for this is currently incomplete</i></h5>
         </div>
         <div class="row py-2">
             <div class="col-4">
